--- a/src/config.yml
+++ b/src/config.yml
@@ -5,19 +5,19 @@ input: ../data/input.txt
 
 output: ../data/output.txt
 
-max_iter_psi: 100
+max_iter_psi: 10000
 
 grid:
-    N: 500
-    Lx: 9
-    Ly: 9
+    N: 10
+    Lx: 10
+    Ly: 10
     #eps: 1e-7
 
 physics:
-    Mu: "1.2"
+    Mu: "np.sqrt(2) - 1"
     dJU:
         start: 0.01
-        stop: 0.9
-        step: 0.05
+        stop: 0.6
+        step: 0.001
 
 
