--- a/src/config.yml
+++ b/src/config.yml
@@ -5,7 +5,7 @@ input: ../data/input.txt
 
 output: ../data/output.txt
 
-max_iter_psi: 10000
+max_iter_psi: 5000
 
 grid:
     N: 10
@@ -18,6 +18,7 @@ physics:
     dJU:
         start: 0.01
         stop: 0.6
-        step: 0.001
+        step: 0.01
+    UIB: 0.2
 
 
