--- a/src/config.yml
+++ b/src/config.yml
@@ -15,12 +15,12 @@ lists:
     dJUs:
         start: 0.0
         stop: 1
-        num: 200
+        num: 3 #200
 
     energies:
         start: 0.01
         stop: 0.35
-        num: 200
+        num: 3 # 200
 
 physics:
     N: 7
